# 2023-project-fair

./: README.md  pyproject.toml  test_feature.py
.github/workflows/: docs.yml  python-app.yml
resources/: random_survey.csv
scripts/: PMMS_test.py  bfs_yankee_swap.py  compare_approx_exact_dists.py  envy_test.py  general_yankee_swap.py  general_yankee_swap_simulations.py  generate_random_survey.py  get_metrics.py  load_survey.py  run_allocation_algorithms.py  survey_simulation.py  yankee_swap.py  yankee_swap_tests.py
scripts/simulations/: allocation_100_0_0.npz  allocation_100_6_12.npz  allocation_2_10.npz  allocation_2_11.npz  allocation_6_0.npz  allocation_6_10.npz  allocation_6_11.npz  allocation_6_12.npz
simulations/: YS_ILP_1000_4.npz  YS_ILP_100_3.npz  YS_ILP_100_4.npz  YS_ILP_10_3.npz  YS_ILP_1500_4.npz  YS_ILP_2000_4.npz  YS_ILP_2000_4_0.npz  YS_ILP_500_3.npz  YS_ILP_500_4.npz  YS_ILP_50_3.npz  YS_ILP_50_4.npz  get_metrics.py  plots.py
src/agent/: __init__.py  constraint.py  feature.py  item.py  valuation.py
src/fair/: agent.py  allocation.py  constraint.py  envy.py  feature.py  item.py  metrics.py  optimization.py  set_tools.py  simulation.py  valuation.py
src/fair/stats/: __init__.py  survey.py
src/valuation/: constraint.py  feature.py  item.py
tests/: conftest.py  test_agent.py  test_allocation.py  test_constraint.py  test_feature.py  test_item.py  test_optimization.py  test_set_tools.py  test_simulator.py  test_valuation.py  test_yankee_swap.py
tests/stats/: test_stats.py  test_survey.py
