[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[pytest]
testpaths = "tests"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project]
name = "valuation"
version = "0.0.1"
authors = [
  { name="David Thibodeau", email="dpthibodeau@umass.edu" },
  { name="George Bissias", email="gbiss@cs.umass.edu" },
]
description = "Item / bundle valuation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
                "numpy>=1.26.1",
                "scipy>=1.11.3",
                "pytest>=7.4.3",
                "black>=23.11.0",
               ]