[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[pytest]
testpaths = "tests"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[project]
name = "fair"
version = "0.0.1"
authors = [
  { name="David Thibodeau", email="dpthibodeau@umass.edu" },
  { name="Paula Navarrete Diaz", email="pnavarretedi@umass.edu" },
  { name="George Bissias", email="gbiss@cs.umass.edu" },
]
description = "Fair Allocation Tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
                "numpy>=1.24.4",
                "scipy>=1.11.3",
                "pytest>=7.4.3",
                "black>=23.11.0",
                "isort>=5.12.0",
                "allocation@git+https://github.com/cheerstopaula/Allocation.git",
                "pdoc>=14.1.0",
               ]